--- a/listener.js.save.1
+++ b/listener.js.save.1
@@ -11,11 +11,11 @@ listener.get('/', function(req, res){
 });
 
 io.on('connection', function(socket){
-    console.log('a user connected');
+	console.log('a user connected');
 
-    socket.on('disconnect', function(){
+	socket.on('disconnect', function(){
 	console.log('user disconnected');
-    });
+  });
 });
 
 
@@ -31,22 +31,14 @@ io.on('connection', function(socket){
     });
 
     socket.on('device-data', function(msg){
-    	console.log('dev-data: ' + msg);
+    	console.log('dev-data: ' + msg)
 	io.emit('data', msg);
-
-	var onlineData = {
-	    "deviceId": -1,
-	    "online": ""
-	};
-	var dataMsg = JSON.parse(msg);
-	onlineData.deviceId = dataMsg.deviceid;
-	onlineData.online = "true";
-	io.emit('online',onlineData);
     });
-
-//    socket.on('data', function(msg){
-//    	console.log('data: ' + msg);
-//    });
+	
+    socket.on('data', function(msg){
+    	console.log('data: ' + msg);
+	
+    });
 
     socket.on('reqInitProject', function(msg){
       console.log("init Project");
@@ -72,5 +64,3 @@ io.on('connection', function(socket){
 listener_http.listen(listener_port, function(){
   console.log('>> listen socket on: ' + listener_port);
 });
-
-
